--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Flamenco&display=swap" rel="stylesheet">
-  <title>Burger Place - The Best Burger Place on the Planet</title>
+  <title>Burger Place</title>
 </head>
 
 <body>
